--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8" />
-    <link href="%PUBLIC_URL%/favicon.ico" rel="icon" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <meta content="#000000" name="theme-color" />
-    <meta
-            content="Web site created using create-react-app"
-            name="description"
-    />
-    <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon" />
-    <!--
+  <meta charset="utf-8" />
+  <link href="%PUBLIC_URL%/favicon.ico" rel="icon" />
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <meta content="#000000" name="theme-color" />
+  <meta content="Web site created using create-react-app" name="description" />
+  <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link href="%PUBLIC_URL%/manifest.json" rel="manifest" />
-    <!--
+  <link href="%PUBLIC_URL%/manifest.json" rel="manifest" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,12 +22,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>DMT</title>
+  <title>DMT</title>
 </head>
+
 <body>
-<noscript>You need to enable JavaScript to run this app.</noscript>
-<div id="root"></div>
-<!--
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
   This HTML file is a template.
   If you open it directly in the browser, you will see an empty page.
 
@@ -39,25 +38,11 @@
   To begin the development, run `npm start` or `yarn start`.
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
+  <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-
-<script>
-  // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyCBJLGUwm3Gudef3OmMpTr4_kuAKojdHKI",
-    authDomain: "dnd-master-tools.firebaseapp.com",
-    databaseURL: "https://dnd-master-tools.firebaseio.com",
-    projectId: "dnd-master-tools",
-    storageBucket: "dnd-master-tools.appspot.com",
-    messagingSenderId: "338033505662",
-    appId: "1:338033505662:web:ded866bbf17722c7"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-</script>
 </body>
+
 </html>
